--- a/MARKSCARDMANAGEMENT/MARKSCARDMANAGEMENT.csproj
+++ b/MARKSCARDMANAGEMENT/MARKSCARDMANAGEMENT.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MARKSCARDMANAGEMENT</RootNamespace>
     <AssemblyName>MARKSCARDMANAGEMENT</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,6 +36,8 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DGVPrinter.cs" />
+    <Compile Include="Frm_Author.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Author.Designer.cs">
+      <DependentUpon>Frm_Author.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_Course.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,11 +73,23 @@
     <Compile Include="Frm_CrsMgmt.Designer.cs">
       <DependentUpon>Frm_CrsMgmt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_Help.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Help.Designer.cs">
+      <DependentUpon>Frm_Help.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_Home.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_Home.Designer.cs">
       <DependentUpon>Frm_Home.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frm_Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Login.Designer.cs">
+      <DependentUpon>Frm_Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_MapUpdate.cs">
       <SubType>Form</SubType>
@@ -81,11 +103,11 @@
     <Compile Include="Frm_MarksCard.Designer.cs">
       <DependentUpon>Frm_MarksCard.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_StuResult.cs">
+    <Compile Include="Frm_MarksCardView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_StuResult.Designer.cs">
-      <DependentUpon>Frm_StuResult.cs</DependentUpon>
+    <Compile Include="Frm_MarksCardView.Designer.cs">
+      <DependentUpon>Frm_MarksCardView.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_StuView.cs">
       <SubType>Form</SubType>
@@ -113,6 +135,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Frm_Author.resx">
+      <DependentUpon>Frm_Author.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_Course.resx">
       <DependentUpon>Frm_Course.cs</DependentUpon>
     </EmbeddedResource>
@@ -122,8 +147,14 @@
     <EmbeddedResource Include="Frm_CrsMgmt.resx">
       <DependentUpon>Frm_CrsMgmt.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Help.resx">
+      <DependentUpon>Frm_Help.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_Home.resx">
       <DependentUpon>Frm_Home.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Login.resx">
+      <DependentUpon>Frm_Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_MapUpdate.resx">
       <DependentUpon>Frm_MapUpdate.cs</DependentUpon>
@@ -131,8 +162,8 @@
     <EmbeddedResource Include="Frm_MarksCard.resx">
       <DependentUpon>Frm_MarksCard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_StuResult.resx">
-      <DependentUpon>Frm_StuResult.cs</DependentUpon>
+    <EmbeddedResource Include="Frm_MarksCardView.resx">
+      <DependentUpon>Frm_MarksCardView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_StuView.resx">
       <DependentUpon>Frm_StuView.cs</DependentUpon>
@@ -154,6 +185,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -169,6 +201,12 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\unnamed.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mks_icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
